FELIX-4057 use findbugs plugin and fix many of the bugs
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/scr@1480532 13f79535-47bb-0310-9956-ffa450edef68